# agentsmcp

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  apprunner.yaml  package.json
deploy/: AWS.md  aws-deploy.sh  aws-teardown.sh
examples/research-bench/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
examples/research-bench/src/: explorer.ts  llm.ts  start.ts  synthesizer.ts
examples/research-writer/: package.json
examples/research-writer/src/: kickoff.ts  researcher.ts  writer.ts
mcp/: README.md  package-lock.json  package.json
mcp/src/: index.ts  resources.ts  server.ts  tools.ts
sdk-py/: pyproject.toml
sdk-py/agentmailbox/: __init__.py  _codec.py  client.py  types.py
sdk-py/tests/: test_compression.py
src/: agentmailbox.ts  server.ts
src/compression/: noop.ts
tests/: compression.test.ts
