[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsmcp"
version = "0.1.1"
description = "Context-sync protocol for AI agents. Every agent has a mailbox. No agent ever starts cold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentMailbox contributors" }]
keywords = ["agents", "ai", "context", "protocol", "mailbox", "llm", "agentsmcp", "agentmailbox"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Communications",
  "Framework :: AsyncIO",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0"]

[project.urls]
Homepage = "https://github.com/RagavRida/agentsmcp"
Issues = "https://github.com/RagavRida/agentsmcp/issues"
Source = "https://github.com/RagavRida/agentsmcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmailbox*"]
exclude = ["examples*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
